@@ -4,6 +4,7 @@
 - fix JS issue on IE8
 - support jquery-ui-rails 5
 - update_columns fixes on subforms refreshing
+- fix dynamic links menu in group links
 
 = 3.4.1
 - fix search value when both field_search and search are enabled and a search with field_search is active
